--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -42,15 +42,14 @@
         }
         .box {
             cursor: pointer;
-            background-color: #ffcc00 !important;
             color: #12232E !important;
             font-size: 2rem !important;
             font-weight: bold !important;
+            background-color: #ffcc00 !important;
             transition: transform 0.3s, background-color 0.6s !important;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) !important;
             border: none !important;
             margin-bottom: 20px !important;
-            background-image: url("{{ asset("build/images/gift.png") }}");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: top center;
@@ -134,13 +133,13 @@
 
 {% block body %}
     <div class="container-fluid d-flex justify-content-center p-5">
-        <h1 class="fw-bold">{{settings.title}}</h1>
+        <h1 {% if settings.titleColor%}style="color: {{ settings.titleColor }}"{% endif%} class="fw-bold">{{settings.title}}</h1>
     </div>
     <div class="container">
         <div class="row text-center">
             {% for box in boxes %}
                 <div class="col-lg-2 col-md-3 col-sm-4 mb-4 d-flex justify-content-center">
-                    <div class="box p-4 d-flex align-items-end justify-content-center bg-light border rounded shadow" style="background-image: url('{{ box.bgImageUrl is not null ? 'uploads/images/boxbg/' ~ box.bgImageUrl : asset('build/images/gift.png') }}')"
+                    <div class="box p-4 d-flex align-items-end justify-content-center bg-light border rounded shadow" style="{% if box.bgColor%}background-color:{{ box.bgColor }} !important;{% endif %}background-image: url('{{ box.bgImageUrl is not null ? 'uploads/images/boxbg/' ~ box.bgImageUrl : asset('build/images/gift.png') }}')"
                          data-bs-toggle="modal"
                             {#setup if auth and user#}
                             {% if settings.auth %}
