--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -25,7 +25,7 @@
         body::before{
             content: "";
             width: 100%;
-            height: 100%;
+            height: 100vh;
             background-color: rgba(0, 0, 0, 0.45);
             position: absolute;
             z-index: -1;
@@ -139,9 +139,15 @@
         <div class="row text-center">
             {% for box in boxes %}
                 <div class="col-lg-2 col-md-3 col-sm-4 mb-4 d-flex justify-content-center">
-                    <div class="box p-4 d-flex align-items-end justify-content-center bg-light border rounded shadow" style="{% if box.bgColor%}background-color:{{ box.bgColor }} !important;{% endif %}background-image: url('{{ box.bgImageUrl is not null ? 'uploads/images/boxbg/' ~ box.bgImageUrl : asset('build/images/gift.png') }}')"
+                    <div class="box p-4 d-flex align-items-end justify-content-center bg-light border rounded shadow"
+                         style="
+                         {% if box.bgColor %}background-color: {{ box.bgColor }} !important;{% endif %}
+                                 background-image: url(
+                                 '{% if box.bgImageUrl is not null %}uploads/images/boxbg/{{ box.bgImageUrl }}{% elseif settings.showGift  %}{{ asset('build/images/gift.png') }}{% endif %}'
+                                 );"
                          data-bs-toggle="modal"
-                            {#setup if auth and user#}
+
+                            {# Set up modal targets depending on auth and user status #}
                             {% if settings.auth %}
                                 {% if app.user %}
                                     data-bs-target="#modal-{{ box.id }}" onclick="addBox({{ box.id }})"
@@ -155,14 +161,15 @@
                                     data-bs-target="#modal-{{ box.id }}"
                                 {% endif %}
                             {% endif %}
-                         style="cursor: pointer;">
-                        {#show opened boxes#}
+                    >
+
                         {% if box.id in activatedBoxIds %}
                             <h2 class="checkmark">✔️</h2>
                         {% else %}
                             <h2 class="box-{{ box.id }}">{{ box.number }}</h2>
                         {% endif %}
                     </div>
+
                 </div>
 
                 <!-- Modal -->
