--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,13 +18,13 @@
             {% endif %}
 
             <form method="post">
-                <div class="mb-3">
+                <div class="mb-4">
                     <label for="inputEmail" class="form-label">Email</label>
-                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control form-control-lg" autocomplete="email" required autofocus>
                 </div>
-                <div class="mb-3">
+                <div class="mb-4">
                     <label for="inputPassword" class="form-label">Heslo</label>
-                    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+                    <input type="password" name="password" id="inputPassword" class="form-control form-control-lg" autocomplete="current-password" required>
                 </div>
 
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
@@ -71,6 +71,9 @@
             .container {
                 padding: 20px;
             }
+        }
+        h1{
+            font-weight: bold !important;
         }
     </style>
 {% endblock %}
